hphp/test/zend/bad/ext/mysqli/tests/mysqli_poll_reference.php.skipif
<?php
require_once('skipif.inc');
require_once('skipifemb.inc');
require_once('connect.inc');
require_once('skipifconnectfailure.inc');

if (!$IS_MYSQLND)
	die("skip mysqlnd only feature, compile PHP using --with-mysqli=mysqlnd");

if (!$link = my_mysqli_connect($host, $user, $passwd, $db, $port, $socket))
	die("skip cannot connect");

if (mysqli_get_server_version($link) < 50012)
	die("skip Test needs SQL function SLEEP() available as of MySQL 5.0.12");

?>